# sec

./: Cargo.toml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: cenas.rs  correct_driver.rs  correct_witness.rs  driver.rs  hdlt_api.rs  lib.rs  main.rs  malicious_driver.rs  malicious_witness.rs  state.rs  trace_utils.rs  witness.rs  witness_api.rs
driver/: Cargo.toml  Readme.md
driver/confs/: three_is_a_crowd.json
driver/src/: conf.rs  correct_client_driver.rs  correct_driver.rs  correct_server_driver.rs  driver.rs  lib.rs  main.rs  malicious_client_driver.rs  malicious_driver.rs  state.rs
driver/src/drivers/: correct_server_driver.rs  correct_user_driver.rs  malicious_user_driver.rs  mod.rs
integration-tests/: Cargo.toml
integration-tests/tests/: happy.rs  happy_replicated.rs  lib.rs
integration-tests/tests/util/: mod.rs  test_config.rs  test_env.rs
keygen/: Cargo.toml
keygen/src/: main.rs
lib/model/: Cargo.toml
lib/model/src/: base64_serialization.rs  closeness_proof.rs  closeness_proof_request.rs  keys.rs  lib.rs  location_proof.rs  malicious_proof.rs  misbehavior_proof.rs  neighbourhood.rs  position_proof.rs  proximity_proof.rs  proximity_proof_request.rs
lib/model/src/api/: mod.rs  pow.rs  rr_message.rs
lib/model/src/keys/: entity.rs  key_base64_serialization.rs  mod.rs  sealable.rs  user.rs
lib/protos/: Cargo.toml  build.rs
lib/protos/src/: cenas.proto  cenas.rs  driver.proto  driver.rs  hdlt.proto  lib.rs  util.proto  util.rs  witness.proto
lib/tracing-utils/: Cargo.toml
lib/tracing-utils/macros/: Cargo.toml
lib/tracing-utils/macros/src/: lib.rs
lib/tracing-utils/src/: lib.rs  metadata_mappers.rs
lib/tracing-utils/tracing-utils-macros/: Cargo.toml
lib/tracing-utils/tracing-utils-macros/src/: lib.rs
protos/src/: cenas.proto
server/: Cargo.toml
server/src/: group_by.rs  hdlt_store.rs  hdlt_store_init.sql  lib.rs  main.rs
server/src/services/: cenas.rs  driver.rs  hdlt_api.rs  listening_service.rs  mod.rs  util.rs
