[package]
name = "driver"
version = "0.1.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
eyre = "0.6"
protos = { path = "../lib/protos" }
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.4"
tracing = "0.1"
tracing-utils = { path = "../lib/tracing-utils" }
json = "0.12"
rand = "0.8"
futures = "0.3"
model = { path = "../lib/model" }
