[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = "0.3"

tokio = { version = "1", features = ["full"] }
tonic = { version = "0.4", features = ["tls"] }
protos = { path = "../lib/protos" }

eyre = "0.6"
color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-appender = "0.1"
opentelemetry-jaeger = "0.11"
tracing-opentelemetry = "0.11"
opentelemetry = "0.12"
