[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1"
color-eyre = "0.5"
eyre = "0.6"
futures = "0.3"
itertools = "0.10"
model = { path = "../lib/model" }
protos = { path = "../lib/protos" }
serde_json = "1"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
structopt = "0.3"
tempfile = "3"
thiserror = "1"
tokio-stream = { version = "0.1", features = ["net"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.4"
tower = "0.4"
tracing = "0.1"
tracing-utils = { path = "../lib/tracing-utils" }

[dev-dependencies]
lazy_static = "1"
