[package]
name = "model"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sodiumoxide = "0.2.6"
tracing = "0.1"
bincode = "1"

[dev-dependencies]
lazy_static = "1"
tempfile = "3"