[package]
name = "tracing-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-appender = "0.1"
opentelemetry-jaeger = "0.11"
tracing-opentelemetry = "0.11"
opentelemetry = "0.12"
tonic = "0.4"
tracing-utils-macros = { path = "./tracing-utils-macros" }
thiserror = "1"
